fixed dark mode and changed background-color on light mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,6 @@
 }
 
 body {
-  background-color: rgb(226, 232, 240);
   --webkit-font-smoothing: antialiased;
 }
 
